--- a/DO.IT.html
+++ b/DO.IT.html
@@ -21,7 +21,7 @@
                 <ul>
                         <li>The main section</li>
                         <li>The footer section</li>
-                        <li>The header section</li>
+                        <li>The header section of my work</li>
                 </ul>
                 
             </section>
